--- a/Portals/0/rich-content/durex/5052197048988/styles/style.css
+++ b/Portals/0/rich-content/durex/5052197048988/styles/style.css
@@ -439,17 +439,20 @@ section {
 #es-durex.es-durex .es-slider .es-next-arrow {
   background-color: transparent;
   border: none;
-  font-size: 20px;
-  padding: 10px;
+  /* font-size: 20px; */
+  /* padding: 10px; */
 }
 #es-durex.es-durex .es-slider .es-prev-arrow {
   width: 50px;
   height: 50px;
-  rotate: 180deg;
 }
 #es-durex.es-durex .es-slider .es-next-arrow {
   width: 50px;
   height: 50px;
+}
+#es-durex.es-durex .es-arrow {
+  width: 100%;
+  /* height: 44px; */
 }
 #es-durex.es-durex .es-slider .es-prev-arrow:hover,
 #es-durex.es-durex .es-slider .es-next-arrow:hover {
@@ -1128,4 +1131,20 @@ section {
   #es-durex.es-durex .es-faq__single {
     padding: 24px 16px 24px 24px;
   }
+}
+
+#es-durex.es-durex .es-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 2rem;
+}
+
+#es-durex.es-durex .es-footer__text {
+  text-align: center;
+  text-wrap: balance;
+  font-weight: 800;
+  margin: 0;
+  font-size: clamp(1rem, 0.8276rem + 0.7882vw, 1.3rem);
 }
