--- a/Portals/0/rich-content/durex/5052197048988/styles/style.css
+++ b/Portals/0/rich-content/durex/5052197048988/styles/style.css
@@ -158,7 +158,7 @@ section {
 #es-durex.es-durex .es-kv__container {
   background-image: url("https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/bg.png");
   background-size: cover;
-  padding: 3rem;
+  padding: 48px;
 }
 
 #es-durex.es-durex .es-kv__title {
@@ -170,7 +170,7 @@ section {
   text-align: center;
   line-height: 1;
   color: var(--es-navy-txt);
-  margin-bottom: 2rem;
+  margin-bottom: 32px;
 }
 
 #es-durex.es-durex .es-kv__title--second {
@@ -271,7 +271,7 @@ section {
 
 /***************************** features styles ***************************/
 #es-durex.es-durex .es-features {
-  padding: 2rem;
+  padding: 32px;
   background-image: url("https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/bg.png");
   background-size: cover;
 }
@@ -311,7 +311,7 @@ section {
   padding: 0;
   line-height: inherit;
   margin: 24px 0;
-  font-size: clamp(0.875rem, 0.7917rem + 0.3704vw, 1.125rem);
+  font-size: clamp(14px, 12.667px + 0.3704vw, 18px);
   text-align: center;
   text-transform: uppercase;
   font-family: 'Encode Sans', sans-serif;
@@ -391,12 +391,12 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-inline: 4rem;
+  padding-inline: 64px;
 }
 #es-durex.es-durex .es-slider .es-slide__title {
   font-weight: 800;
   text-transform: uppercase;
-  font-size: clamp(1.375rem, 0.9583rem + 1.8519vw, 2.625rem);
+  font-size: clamp(22px, 15.333px + 1.8519vw, 42px);
 }
 #es-durex.es-durex .es-slider .es-slide__text-container--3 {
   position: relative;
@@ -417,13 +417,13 @@ section {
   font-family: 'Encode Sans', sans-serif;
   font-weight: 500;
   text-transform: uppercase;
-  font-size: clamp(0.875rem, 0.7917rem + 0.3704vw, 1.125rem);
+  font-size: clamp(14px, 12.667px + 0.3704vw, 18px);
 }
 #es-durex.es-durex .es-slider .es-slide__text--smaller {
   font-family: 'Encode Sans', sans-serif;
   font-weight: 500;
   text-transform: uppercase;
-  font-size: clamp(0.75rem, 0.6667rem + 0.3704vw, 1rem);
+  font-size: clamp(12px, 10.667px + 0.3704vw, 16px);
 }
 #es-durex.es-durex .es-slider .es-carousel-arrows {
   display: flex;
@@ -439,8 +439,6 @@ section {
 #es-durex.es-durex .es-slider .es-next-arrow {
   background-color: transparent;
   border: none;
-  /* font-size: 20px; */
-  /* padding: 10px; */
 }
 #es-durex.es-durex .es-slider .es-prev-arrow {
   width: 50px;
@@ -452,7 +450,6 @@ section {
 }
 #es-durex.es-durex .es-arrow {
   width: 100%;
-  /* height: 44px; */
 }
 #es-durex.es-durex .es-slider .es-prev-arrow:hover,
 #es-durex.es-durex .es-slider .es-next-arrow:hover {
@@ -470,13 +467,13 @@ section {
   }
 
   #es-durex.es-durex .es-slider .es-slide__container {
-    padding-inline: 0rem 4rem;
+    padding-inline: 0px 64px;
   }
   #es-durex.es-durex .es-slider .es-slide__text-container--3:before {
     height: 100px;
     width: 100px;
-    top: -45%;
-    right: -14%;
+    top: -100%;
+    right: -11%;
   }
 }
 
@@ -493,7 +490,7 @@ section {
   padding: 0;
   line-height: inherit;
   color: #fff;
-  font-size: clamp(1.375rem, 0.8333rem + 2.4074vw, 3rem);
+  font-size: clamp(22px, 13.333px + 2.4074vw, 48px);
   text-align: center;
   margin: 16px 0;
   text-transform: uppercase;
@@ -518,7 +515,7 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.5rem;
+  gap: 24px;
 }
 
 #es-durex.es-durex .es-benefits__img {
@@ -725,19 +722,19 @@ section {
   position: relative;
   left: 50%;
   transform: translate(-50%, 0);
-  padding: 0.5rem;
+  padding: 8px;
 }
 #es-durex.es-durex .es-tip__title {
   font-weight: 800;
-  font-size: clamp(1.25rem, 1.0417rem + 0.9259vw, 1.875rem);
+  font-size: clamp(20px, 16.667px + 0.9259vw, 30px);
   margin: 0;
-  margin-top: 2rem;
+  margin-top: 32px;
 }
 #es-durex.es-durex .es-tip__text {
   font-weight: 300;
-  font-size: clamp(1.125rem, 1rem + 0.5556vw, 1.5rem);
-  padding-inline: 1.5rem;
-  margin-block: 0.5rem;
+  font-size: clamp(18px, 16px + 0.5556vw, 24px);
+  padding-inline: 24px;
+  margin-block: 8px;
 }
 #es-durex.es-durex .es-tip__arrow {
   rotate: 90deg;
@@ -759,19 +756,22 @@ section {
   max-width: 100%;
 }
 #es-durex.es-durex .es-tip__img--top {
-  margin-bottom: -96px;
+  margin-bottom: -60px;
   transition: margin-bottom 0.5s ease;
   z-index: 1;
 }
+#es-durex.es-durex .es-tip:hover .es-tip__img--top {
+  margin-bottom: -25px;
+}
 #es-durex.es-durex .es-info__container {
   text-align: center;
-  margin-top: 7rem;
+  margin-top: 112px;
 }
 #es-durex.es-durex .es-info__title {
   font-weight: 300;
-  font-size: clamp(1.375rem, 0.8333rem + 2.4074vw, 3rem);
+  font-size: clamp(22px, 13.333px + 2.4074vw, 48px);
   text-transform: uppercase;
-  padding-inline: 2rem;
+  padding-inline: 32px;
 }
 #es-durex.es-durex .es-info__title--strong {
   font-weight: 800;
@@ -813,8 +813,8 @@ section {
 #es-durex.es-durex .es-info__size {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  padding: 2rem 2rem 0 2rem;
+  gap: 16px;
+  padding: 32px 32px 0 32px;
   margin-bottom: 0;
 }
 #es-durex.es-durex .es-info__size--top {
@@ -825,7 +825,7 @@ section {
 
 #es-durex.es-durex .es-info__text {
   text-transform: uppercase;
-  font-size: clamp(0.875rem, 0.7917rem + 0.3704vw, 1.125rem);
+  font-size: clamp(14px, 12.667px + 0.3704vw, 18px);
   text-align: center;
   margin: 0;
 }
@@ -850,13 +850,13 @@ section {
 
 @media (min-width: 768px) {
   #es-durex.es-durex .es-tip__title {
-    margin-top: 3rem;
+    margin-top: 48px;
   }
   #es-durex.es-durex .es-tip__container {
     bottom: -2%;
   }
   #es-durex.es-durex .es-info__container {
-    margin-top: 5rem;
+    margin-top: 80px;
   }
   #es-durex.es-durex .es-info__desktop-container {
     display: flex;
@@ -927,14 +927,14 @@ section {
   background-image: url("https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/cross-bg.png");
   background-size: cover;
   background-position: center;
-  padding: 2rem;
+  padding: 32px;
 }
 
 #es-durex.es-durex .es-cross__title {
   margin: 0;
   padding: 0;
   line-height: inherit;
-  font-size: clamp(1.375rem, 1.2083rem + 0.7407vw, 1.875rem);
+  font-size: clamp(22px, 19.333px + 0.7407vw, 30px);
   text-align: center;
   text-transform: uppercase;
   font-weight: 300;
@@ -947,8 +947,8 @@ section {
 #es-durex.es-durex .es-cross__container {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
-  margin-top: 1.5rem;
+  gap: 24px;
+  margin-top: 24px;
 }
 #es-durex.es-durex .es-cross__product {
   display: flex;
@@ -1025,7 +1025,7 @@ section {
 /***************************** FAQ styles ***************************/
 
 #es-durex.es-durex .es-faq {
-  padding: 2rem;
+  padding: 32px;
   background-image: url("https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/faq-bg.png");
   background-size: cover;
   background-position: center;
@@ -1034,7 +1034,7 @@ section {
 #es-durex.es-durex .es-faq__title {
   text-align: center;
   font-weight: 300;
-  font-size: clamp(1.375rem, 0.8333rem + 2.4074vw, 3rem);
+  font-size: clamp(22px, 13.333px + 2.4074vw, 48px);
   text-transform: uppercase;
 }
 #es-durex.es-durex .es-faq__title--strong {
@@ -1076,7 +1076,7 @@ section {
   margin: 0;
   padding: 0;
   line-height: 1.2;
-  font-size: clamp(0.8125rem, 0.75rem + 0.2778vw, 1rem);
+  font-size: clamp(13px, 12px + 0.2778vw, 16px);
   max-width: 83.33333%;
   text-transform: uppercase;
 }
@@ -1137,8 +1137,8 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
-  padding: 2rem;
+  gap: 16px;
+  padding: 32px;
 }
 
 #es-durex.es-durex .es-footer__text {
@@ -1146,5 +1146,5 @@ section {
   text-wrap: balance;
   text-transform: uppercase;
   font-weight: 800;
-  font-size: clamp(1.375rem, 1.2083rem + 0.7407vw, 1.875rem);
+  font-size: clamp(22px, 19.333px + 0.7407vw, 30px);
 }
